--- a/evidencia_6/index.html
+++ b/evidencia_6/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
     content="landing page personal de [Tu nombre] - Desarrollador web Frontend especializado en CSS Responsive">
- <title>[tu nombre] - Desarrollador Frontend</title>
+ <title>Harrison Guerrero - Desarrollador Frontend</title>
  <link rel="stylesheet" href="./_css/style.css">
  </head>
   <!--Header con navegacion Responsive --> 
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="header__content">
                 <div class="logo">
-                    <h1 class="logo__text">[Tu Nombre]</h1>
+                    <h1 class="logo__text">Harrison Guerrero</h1>
                 </div>
                 <nav class="navbar">
             <ul>
@@ -23,7 +23,7 @@
     <div class="container">
       <div class="header__content">
         <div class="logo">
-          <h1 class="logo__text">[Tu Nombre]</h1>
+          <h1 class="logo__text">Harrison Guerrero</h1>
         </div>
 
         <nav class="nav" role="navigation" aria-label="Navegación principal">
@@ -133,7 +133,7 @@
               Estoy disponible para proyectos freelance y oportunidades de colaboración.
             </p>
             <div class="footer_contact">
-              <a href="mailto:tu@email.com" class="contact-link">tu@email.com</a>
+              <a href="mailto:tu@email.com" class="contact-link">hguerreropalacios17@gmail.com</a>
               <a href="https://github.com/tuusuario" class="contact-link">GitHub</a>
               <a href="https://linkedin.com/in/tuusuario" class="contact-link">LinkedIn</a>
             </div>
