--- a/evidencia_6/index.html
+++ b/evidencia_6/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-    content="landing page personal de [Tu nombre] - Desarrollador web Frontend especializado en CSS Responsive">
+    content="landing page personal de Harrison Guerrero - Desarrollador web Frontend especializado en CSS Responsive">
  <title>Harrison Guerrero - Desarrollador Frontend</title>
  <link rel="stylesheet" href="./_css/style.css">
  </head>
